fix nav button safari

--- a/src/components/Nav/nav.module.css
+++ b/src/components/Nav/nav.module.css
@@ -35,11 +35,14 @@
     background-size:
       100% 1.5px,
       100% 0px;
-    .cta {
-      width: calc-size(auto, size);
-      padding: 0 1rlh 0 0;
-      margin-inline-start: 2rlh;
-      opacity: 1;
+
+    @supports (width: calc-size(auto, size)) {
+      .cta {
+        width: calc-size(auto, size);
+        padding: 0 1rlh 0 0;
+        margin-inline-start: 2rlh;
+        opacity: 1;
+      }
     }
   }
 }
@@ -143,15 +146,20 @@ body[data-sticky="true"] .navBackground {
     margin-inline-start: 2rlh;
   }
   .cta {
-    width: 0;
-    padding: 0;
-    margin-inline-start: 0;
-    min-width: 0;
-    opacity: 0;
-    transition:
-      width 0.16s ease,
-      margin-inline-start 0.1s ease,
-      padding 0.4s ease;
+    margin-inline-start: 2rlh;
+  }
+  @supports (width: calc-size(auto, size)) {
+    .cta {
+      width: 0;
+      padding: 0;
+      margin-inline-start: 0;
+      min-width: 0;
+      opacity: 0;
+      transition:
+        width 0.16s ease,
+        margin-inline-start 0.1s ease,
+        padding 0.4s ease;
+    }
   }
 }
 
